prod_snapshot_2015-09-24_1030/objects/SLA_By_Product_Type__c.object
<CustomObject>
    <fields>
        <fullName>Awaiting_Client_Approval_Dec__c</fullName>
        <label>Awaiting Client Approval Dec</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Awaiting_Client_Approval_WA__c</fullName>
        <formula>Products_Live__c *  Awaiting_Client_Approval_Dec__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awaiting Client Approval WA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Awaiting_Client_Approval__c</fullName>
        <formula>ROUND( Awaiting_Client_Approval_Dec__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awaiting Client Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Awaiting_Client_Asset_Dec__c</fullName>
        <label>Awaiting Client Asset Dec</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Awaiting_Client_Asset_WA__c</fullName>
        <formula>Awaiting_Client_Asset_Dec__c * Products_Live__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awaiting Client Asset WA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Awaiting_Client_Asset__c</fullName>
        <formula>ROUND(Awaiting_Client_Asset_Dec__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awaiting Client Asset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Awaiting_Client_Onboard_Dec__c</fullName>
        <label>Awaiting Client Onboard Dec</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Awaiting_Client_Onboard_WA__c</fullName>
        <formula>Awaiting_Client_Onboard_Dec__c *  Products_Live__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awaiting Client Onboard WA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Awaiting_Client_Onboard__c</fullName>
        <formula>ROUND(Awaiting_Client_Onboard_Dec__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awaiting Client Onboard</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Won_To_Assigned_Dec__c</fullName>
        <label>Closed Won To Assigned Dec</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Won_To_Assigned__c</fullName>
        <formula>ROUND( Closed_Won_To_Assigned_Dec__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Won To Assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_To_Live_Dec__c</fullName>
        <label>Days To Live Dec</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_To_Live__c</fullName>
        <formula>ROUND(Days_To_Live_Dec__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days To Live</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Fulfillment_Dec__c</fullName>
        <label>In Fulfillment Dec</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Fulfillment_WA__c</fullName>
        <formula>In_Fulfillment_Dec__c *  Products_Live__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Fulfillment WA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Fulfillment__c</fullName>
        <formula>ROUND(In_Fulfillment_Dec__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Fulfillment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period_Live_Date__c</fullName>
        <label>Period Live Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product_SLA_Dec__c</fullName>
        <label>Product SLA Dec</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_SLA__c</fullName>
        <formula>ROUND(Product_SLA_Dec__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_Live__c</fullName>
        <label>Products Live</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Sort__c</fullName>
        <formula>CASE( Product_Type__c ,&quot;PPC&quot;,1,&quot;SEO&quot;,2,&quot;Social&quot;,3,&quot;Maps&quot;,4,&quot;Email&quot;,5,&quot;Template Website&quot;,6,&quot;Custom Website&quot;,7,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Missing__c</fullName>
        <formula>Total_Time__c -  Days_To_Live_Dec__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Missing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time__c</fullName>
        <formula>Closed_Won_To_Assigned_Dec__c +  Awaiting_Client_Asset_Dec__c +  Awaiting_Client_Approval_Dec__c +  In_Fulfillment_Dec__c + Awaiting_Client_Onboard_Dec__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>SLA By Product Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Level__c</columns>
        <columns>Products_Live__c</columns>
        <columns>Days_To_Live__c</columns>
        <columns>Days_To_Live_Dec__c</columns>
        <columns>NAME</columns>
        <columns>Product_Type__c</columns>
        <columns>Period_Live_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Period_Live_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>7/1/2013 12:00 AM</value>
        </filters>
        <filters>
            <field>Period_Live_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>8/4/2013 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllCreatedToday</fullName>
        <columns>Level__c</columns>
        <columns>Products_Live__c</columns>
        <columns>Days_To_Live__c</columns>
        <columns>Days_To_Live_Dec__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Product_Type__c</columns>
        <columns>Period_Live_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>Period_Live_Date__c</field>
            <operation>greaterThan</operation>
            <value>6/1/2014 12:00 AM</value>
        </filters>
        <label>All Created Today</label>
    </listViews>
    <nameField>
        <label>Product Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLA_By_Product_Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>